# bolt-lmm

./: .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md  USAGE.md  license.txt
benchmarks/: CudaStep1StreamingBenchmark.cpp  README.md  generate_plink_benchmark.py  generate_real_plink_benchmark.py  prepare_reml_benchmark.py
benchmarks/results/: a100_cpu_threads.tsv  a100_cuda_host_threads.tsv  a100_cuda_registered_host_cache.tsv  a100_cuda_staging_experiments.tsv  a100_production_headline.tsv  a100_reml.tsv  a100_stage1_cpu_ceiling.tsv  a100_stage1_headline.tsv  a100_stage1_real_genotypes.tsv  a100_stage1_target_700k.tsv  a100_stage1_target_cache.tsv  a100_stage2_cpu.tsv  a100_stage2_cuda.tsv  a100_stage2_threads.tsv
example/: EUR_subset.exclude2  EUR_subset.pheno2.covars  example.dosage2Snps.stats  example.dosageSnps.stats  example.impute2Snps.stats  example.stats  run_example.sh  run_example_reml2.sh
src/: Bolt.cpp  Bolt.hpp  BoltMain.cpp  BoltParEstCV.cpp  BoltParEstCV.hpp  BoltParams.cpp  BoltParams.hpp  BoltReml.cpp  CovariateBasis.cpp  CovariateBasis.hpp  CudaStage2.cu  CudaStage2.hpp  CudaStep1.cu  CudaStep1.hpp  DataMatrix.cpp  DataMatrix.hpp  FileUtils.cpp  FileUtils.hpp  Jackknife.cpp  Jackknife.hpp  LDscoreCalibration.cpp  LDscoreCalibration.hpp  LapackConst.hpp  Makefile  MapInterpolater.cpp  MapInterpolater.hpp  MatrixUtils.cpp  MatrixUtils.hpp  MemoryUtils.cpp  MemoryUtils.hpp  NonlinearOptMulti.cpp  NonlinearOptMulti.hpp  NumericUtils.cpp  NumericUtils.hpp  OpenMpCompat.hpp  ParallelMemCopy.cpp  ParallelMemCopy.hpp  PgenUtils.cpp  PgenUtils.hpp  PhenoBuilder.cpp  (+19 more)
tests/: CudaStage2Parity.cpp  CudaStep1Parity.cpp  PgenStage1Parity.cpp  PgenStage2Parity.cpp
tests/data/pgen_parity/: README.md  example-bgen.bgen  remove.txt
